styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

@font-face {
    font-family: 'Josefin Sans';
    font-weight: 400;
    src: url('./assets/fonts/josefinsansregular-x3lyv-webfont.woff2') format('woff2'),
        url('./assets/fonts/josefinsansregular-x3lyv-webfont.woff') format('woff');
}

@font-face {
    font-family: 'Josefin Sans';
    font-weight: 700;
    src: url('./assets/fonts/josefinsansbold-ova7o-webfont.woff2') format('woff2'),
        url('./assets/fonts/josefinsansbold-ova7o-webfont.woff') format('woff');
}

@font-face {
    font-family: 'Josefin Sans';
    font-weight: 300;
    src: url('./assets/fonts/josefinsanslight-zvell-webfont.woff2') format('woff2'),
        url('./assets/fonts/josefinsanslight-zvell-webfont.woff') format('woff');
}

*::before {
    margin: 0;padding: 0;box-sizing: border-box;
}
*::after {
    margin: 0;padding: 0;box-sizing: border-box;
}

html {
    min-height: 100dvh;
    min-height: 100vh;
}

body {
    min-height: 100dvh;
    min-height: 100vh;
    font-family: 'Josefin Sans', sans-serif;
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

strong {
    font-weight: 700;
    font-size: 1.15rem;
}

@media (min-width:1050px) {
    .container {
        display: grid;
        grid-template-columns: 1fr 75vw;
        grid-template-rows: 92vh 1fr;
    }
    .main-container {
        grid-row: span 2;
        max-height: 100vh;
        overflow-y: scroll;
    }
    .footer {
        overflow-y: hidden;
    }
}
.git-icon {
    vertical-align: bottom;
}
/************************** 
            HEADER
***************************/
.header {
    color: #e4e4e4;
    background-color: rgb(6, 6, 139);
    padding: 1em;
}
.header h1 {
    font-size: 3rem;
}
.header-about {
    font-weight: 300;
    padding-block: 1em;
    line-height: 1.5;
    font-size: 1.1em;
}
.contact-info {
    font-weight: 700;
    font-size: 1.2rem;
    padding-block: 1em;
    padding-inline: .5em;
    display: flex;
    flex-direction: column;
    gap: .2em;
    outline: 1px solid white;
    max-width: fit-content;
    color: inherit;
}
.contact-info div {
    font-weight: 300;
    padding-block: .1em;
}

.contact-info div a[href^="tel"]{
    color:inherit;
}

/************************** 
            MAIN
***************************/
.main-container {
    padding: 1em;
    background-color: #fcfcfc;
}
.projects-list-header {
    margin-block: .5em;
}
.project-list {
    list-style-type: none;
    display: flex;
    flex-direction: column;
    gap: 1.5em;
}
.project {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 1em;
    padding: .5em;
    box-shadow: 2px 2px 6px #202020;
}
.project-header {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: .8em;
}
.project-header h2 {
    font-weight: 700;
}
.project-links a {
    text-decoration: none;
    display: inline-block;
    padding: .5em;
    border: 2px solid #2e2e2e;
    transform:250ms;
}
.project-links a:hover, .project-links a:focus {
    transform: translate(0, -8%);
}
.project img {
    width: 50%;
    position: relative;
    vertical-align: middle;
    object-fit: cover;
}
.project-image-container {
    background-color: black;
    width: 100%;
    min-height: 12em;
    max-height: 20em; 
    display: flex;
    justify-content: center;
    padding-block: .5em;
    border-radius: 0px 25px 0px 0px;
}
.project-description {
    line-height: 1.2em;
}
.live-demo-button {
    font-weight: 700;
    color: rgb(8, 8, 160);
    border-color: rgb(7, 7, 148) !important;
    box-shadow: 1px 1px 1px blue;
}
.github-code-button {
    color: inherit;
}
.project-language-list {
    list-style-type: none;
    display: flex;
    gap: 1em;
    color: #202020;
    font-size: .95rem;
}
.project-language-list li {
    padding: 0.3em;
    padding-top: .5em;
    background-color: #e7e7e7;
    border-radius: 5px;
}
@media(min-width:800px) {
    .project-list {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }
}
/* FIX LANG LIST PADDING AND TELEPHONE NUMBER SYLING     */
@media(min-width:1050px) {
    .project-list {
        display: grid;
        grid-template-columns: repeat(4, 1fr);
    }
    .project {
        grid-column: span 2;
    }
    .project:first-of-type {
        grid-column: span 4;
    }
    .project:last-of-type {
        grid-column: span 4;
    }
    .main-container h1 {
        text-align: center;
    }
}
h3 {
    margin-block: .8em;
}
.main-content-header {
    font-size: 2.8rem;
}
/************************** 
        SKILLS LIST
***************************/
h3 {
    background-color: #000000;
    width: fit-content;
    color: #e7e7e7;
    padding: 0.2rem;
    padding-top: .4rem;
}
.skills-list {
    list-style-type: none;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
}
.skill {
    display: grid;
    place-items: center;
    font-size: 1.3rem;
    font-weight: 700;
}
.skill img {
    height: 3rem;
    margin-bottom: .5em;
}
/************************** 
            FOOTER
***************************/
footer {
    color: rgb(238, 238, 238);
    background-color: #0d064d;
    padding: 1.2em;
    display: flex;
    gap: 1em;
    place-content: center;
}
.footer-logo {
    font-size: 2em;
    text-decoration: none;
    color: white;
}

